syntax = "proto3";

package v1;

import "third_party/tagger/tagger.proto";

option go_package = "./v1;api_v1";

message ContactListRequest{}

message ContactListResponse{
    message Item{
        int32 id = 1;
        string username = 2;
        string avatar = 3;
        string name = 4;
        string surname = 5;
        int32 gender = 6;
        string about = 7;
        //        string remark = 8;
        int32 is_online = 9;
        int32 group_id = 10;
    }

    repeated Item items = 1;
}

message ContactDeleteRequest{
    int32 friend_id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactDeleteResponse{}

//message ContactEditRemarkRequest{
//    int32 friend_id = 1 [(tagger.tags) = "binding:\"required\""];
//    string remark = 2;
//}

//message ContactEditRemarkResponse{}

message ContactDetailRequest{
    int32 user_id = 1 [(tagger.tags) = "form:\"user_id\" binding:\"required\""];
}

message ContactDetailResponse{
    int32 id = 1;
    string username = 2;
    string avatar = 3;
    string name = 4;
    string surname = 5;
    int32 gender = 6;
    string about = 7;
    //    string remark = 8;
//    int32 friend_request = 9;
    int32 friend_status = 10;
    int32 group_id = 11;
    int32 is_bot = 12;
}

message ContactChangeGroupRequest{
    int32 user_id = 1 [(tagger.tags) = "form:\"user_id\" binding:\"required\""];
    int32 group_id = 2 [(tagger.tags) = "form:\"group_id\""];
}

message ContactChangeGroupResponse{}

message ContactRequestCreateRequest{
    int32 friend_id = 1 [(tagger.tags) = "binding:\"required\""];
    //  string remark = 2 [(tagger.tags) = "binding:\"required\""];
}

message ContactRequestCreateResponse{}

message ContactRequestAcceptRequest{
    int32 apply_id = 1 [(tagger.tags) = "binding:\"required\""];
    // string remark = 2 [(tagger.tags) = "binding:\"required\""];
}

message ContactRequestAcceptResponse{}

message ContactRequestDeclineRequest{
    int32 apply_id = 1 [(tagger.tags) = "binding:\"required\""];
    // string remark = 2 [(tagger.tags) = "binding:\"required\""];
}

message ContactRequestDeclineResponse{}

message ContactRequestListResponse{
    message Item{
        int32 id = 1;
        int32 user_id = 2;
        int32 friend_id = 3;
        // string remark = 4;
        string username = 5;
        string avatar = 6;
        string name = 7;
        string surname = 8;
        // string created_at = 7;
    }

    repeated Item items = 1;
}

message ContactGroupCreateRequest{
    string name = 1 [(tagger.tags) = "binding:\"required\""];
    int32 sort = 2 [(tagger.tags) = "binding:\"required\""];
}

message ContactGroupCreateResponse{
    int32 id = 1;
}

message ContactGroupUpdateRequest{
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
    string name = 2 [(tagger.tags) = "binding:\"required\""];
    int32 sort = 3 [(tagger.tags) = "binding:\"required\""];
}

message ContactGroupUpdateResponse{
    int32 id = 1;
}

message ContactGroupDeleteRequest{
    int32 id = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactGroupDeleteResponse{
    int32 id = 1;
}

message ContactGroupSortRequest{
    message Item{
        int32 id = 1 [(tagger.tags) = "binding:\"required\""];
        int32 sort = 2 [(tagger.tags) = "binding:\"required\""];
    }
    repeated Item items = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactGroupSortResponse{}

message ContactGroupListRequest{}

message ContactGroupListResponse{
    message Item{
        int32 id = 1;
        string name = 2;
        int32 count = 3;
        int32 sort = 4;
    }
    repeated Item items = 1;
}

message ContactGroupSaveRequest{
    message Item{
        int32 id = 1 [(tagger.tags) = "binding:\"required\""];
        int32 sort = 2 [(tagger.tags) = "binding:\"required\""];
        string name = 3 [(tagger.tags) = "binding:\"required\""];
    }
    repeated Item items = 1 [(tagger.tags) = "binding:\"required\""];
}

message ContactGroupSaveResponse{}
